support site title, fix z-index so menu isn't on top of lightbox overlay

--- a/stylesheets/base.css
+++ b/stylesheets/base.css
@@ -46,7 +46,7 @@ body{
   top: 0;
   right: 0;
   padding: 5px 10px;
-  z-index:101;
+  z-index:81;
 }
 #header .credits a{
   background-color: #868a1f;
@@ -72,7 +72,7 @@ body{
   float: left;
   width: 100px;
   position: relative;
-  z-index: 100;
+  z-index: 80;
 }
 #navigation li a, #navigation li.active li a{
   padding: 5px 10px;
@@ -108,7 +108,7 @@ div#breadcrumb{
 }
 #content{
   position: relative;
-  z-index: 100;
+  z-index: 80;
   min-height: 400px;
 }
 #footer{
@@ -251,7 +251,7 @@ ul.navi a:hover {
 }
 ul#top-nav{
   position: relative;
-  z-index: 200;
+  z-index: 80;
 }
 
 .blog_post .curved .contents{
